--- a/contac.html
+++ b/contac.html
@@ -216,7 +216,7 @@
         <div class="header">
             <img src="projexino.png" alt="Projexino Logo" class="logo">
             <div class="tagline">
-                <span>Scan</span>-<span>Share</span>-<span>Submit</span>-<span>Succeed</span>
+             <!---   <span>Scan</span>-<span>Share</span>-<span>Submit</span>-<span>Succeed</span>-->
             </div>
             <a href="https://projexino.com/" class="title">Contact Us</a>
             <p class="subtitle">Fill out the form below and we'll get back to you as soon as possible.</p>
